--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,40 +6,62 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.MainActivity">
 
+    <!-- Video title -->
+    <TextView
+        android:id="@+id/textMainVideo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="100dp"
+        android:background="@drawable/background_title"
+        android:paddingStart="21dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:text="@string/main_video"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <!-- Progress bar download: show status download-->
     <com.google.android.material.progressindicator.LinearProgressIndicator
         android:id="@+id/progressBarVideo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:indeterminate="true"
-        app:indicatorColor="@color/primary_dark"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textMainVideo" />
-
-    <!-- Video title -->
-    <TextView
-        android:id="@+id/textMainVideo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/main_video"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:indicatorColor="@color/accent"
+        app:layout_constraintBottom_toBottomOf="@+id/textMainVideo"
+        app:layout_constraintEnd_toEndOf="@+id/textMainVideo"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <!-- RecyclerView : Video -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewMainVideo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:scrollbars="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textMainVideo" />
 
+    <!-- PDF title -->
+    <TextView
+        android:id="@+id/textMainPdf"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/background_title"
+        android:paddingStart="21dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:text="@string/main_pdf"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewMainVideo" />
 
     <!-- Progress bar download: show status download-->
     <com.google.android.material.progressindicator.LinearProgressIndicator
@@ -47,28 +69,17 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:indeterminate="true"
-        app:indicatorColor="@color/primary_dark"
+        app:indicatorColor="@color/accent"
+        app:layout_constraintBottom_toBottomOf="@+id/textMainPdf"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textMainPdf" />
-
-    <!-- PDF title -->
-    <TextView
-        android:id="@+id/textMainPdf"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/main_pdf"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerViewMainVideo" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <!-- RecyclerView : PDF -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewMainPdf"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="5dp"
         android:scrollbars="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
