--- a/app/src/main/res/layout/item_pdf_vertical.xml
+++ b/app/src/main/res/layout/item_pdf_vertical.xml
@@ -8,7 +8,11 @@
     android:checkable="true"
     android:clickable="true"
     android:clipToPadding="true"
-    android:focusable="true">
+    android:focusable="true"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="3dp"
+    app:cardPreventCornerOverlap="true"
+    app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -59,6 +63,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
             android:layout_marginEnd="10dp"
+            android:lines="2"
+            android:maxLines="2"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="#999999"
             app:layout_constraintBottom_toBottomOf="@+id/divider"
