--- a/app/src/main/res/layout/item_video_horizontal.xml
+++ b/app/src/main/res/layout/item_video_horizontal.xml
@@ -3,12 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/lyt_parent"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:checkable="true"
     android:clickable="true"
     android:clipToPadding="true"
-    android:focusable="true">
+    android:focusable="true"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="3dp"
+    app:cardPreventCornerOverlap="true"
+    app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -56,12 +60,14 @@
         <!-- Text url: for example (https://storage.googleapis.com/exoplayer-test-media-1/mp4/android-screens-10s.mp4)-->
         <TextView
             android:id="@+id/textUrl"
-            android:layout_width="0dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="3dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="16dp"
+            android:lines="2"
+            android:maxLines="2"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="#999999"
             app:layout_constraintBottom_toBottomOf="parent"
