--- a/app/src/main/res/layout/item_video_horizontal.xml
+++ b/app/src/main/res/layout/item_video_horizontal.xml
@@ -82,6 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
+            android:backgroundTint="@color/white"
             android:contentDescription="@string/all_buttonDownload"
             app:layout_constraintBottom_toBottomOf="@+id/textUrl"
             app:layout_constraintEnd_toEndOf="parent"
