--- a/app/src/main/res/layout/item_pdf_vertical.xml
+++ b/app/src/main/res/layout/item_pdf_vertical.xml
@@ -45,13 +45,7 @@
         <!-- Text name: for example (PDF 1, PDF2)-->
         <TextView
             android:id="@+id/textName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:maxLines="3"
-            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-            android:textColor="#37474F"
-            app:fontFamily="sans-serif-medium"
+            style="@style/TextViewTitle"
             app:layout_constraintStart_toEndOf="@+id/divider"
             app:layout_constraintTop_toTopOf="@+id/divider"
             tools:text="PDF 1" />
@@ -59,14 +53,7 @@
         <!-- Text url: for example (https://storage.googleapis.com/exoplayer-test-media-1/mp4/android-screens-10s.mp4)-->
         <TextView
             android:id="@+id/textUrl"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
-            android:layout_marginEnd="10dp"
-            android:lines="2"
-            android:maxLines="2"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="#999999"
+            style="@style/TextViewSubTitle"
             app:layout_constraintBottom_toBottomOf="@+id/divider"
             app:layout_constraintEnd_toStartOf="@+id/imageButtonDownload"
             app:layout_constraintHorizontal_bias="0.0"
@@ -77,10 +64,7 @@
         <!-- Image button download: for example (download, close download)-->
         <ImageButton
             android:id="@+id/imageButtonDownload"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:backgroundTint="@color/white"
+            style="@style/ImageButtonAction"
             android:contentDescription="@string/all_buttonDownload"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -90,8 +74,7 @@
         <!-- Progress bar download: show status download-->
         <com.google.android.material.progressindicator.LinearProgressIndicator
             android:id="@+id/progressBarDownload"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/LinearProgressIndicator"
             app:indicatorColor="@color/primary_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
